--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "vue": "^3.2.38",
+    "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
